manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-template
  namespace: web
spec:
  replicas: 4
  selector:
    matchLabels:
      app: site-template
  template:
    metadata:
      labels:
        app: site-template
    spec:
      containers:
        - name: site
          image: sylvain849/mon-site-nginx-template:v1
          ports:
            - containerPort: 80
