manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mon-site-nginx-template-svc
  namespace: web
spec:
  selector:
    app: site-template
  ports:
    - port: 80
      targetPort: 80
