manifests/ingress.yml
kapiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mon-site-nginx-template-ingress
  namespace: web
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mon-site-nginx-template.local
      secretName: site-template-tls
  rules:
    - host: mon-site-nginx-template.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mon-site-nginx-template-svc
                port:
                  number: 80
